--- a/assets/css/customExa.css
+++ b/assets/css/customExa.css
@@ -171,16 +171,24 @@ a {
     position: fixed !important;
 }
 
+
 .ulwidget li {
     float: left;
     width: 50%;
     margin-bottom: 10px;
 }
-
+ 
 .ulwidget li div {
     width: 90%;
 }
 
+.ulwidget-hl-1 p{
+    line-height: 130% !important; 
+}
+.ulwidget-hl-1 h5{
+    line-height: 130% !important; 
+    margin: 0px;
+}
 @media only screen and (max-width: 600px) {
     .ulwidget li {
         float: left;
@@ -327,3 +335,6 @@ iframe {
     box-shadow: 0 3px 5px 0 rgb(228 63 82 / 10%);
 }
  
+.sth01{
+    min-height: 181px;
+}
