--- a/assets/css/customExa.css
+++ b/assets/css/customExa.css
@@ -11,6 +11,14 @@ h1,h2{
 
 }
 
+.bg-half-150{
+    padding: 150px 0;
+    background-size: cover;
+    align-self: center;
+    position: relative;
+    background-position: center center;
+}
+
 .btn-exa{
     border:3px solid #fff;
     color: #fff;;
